<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_layout_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zebra.rfidreader.demo.settings.ApplicationSettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/readerSettingsTitle"
                style="@style/style_medium_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="bottom"
                android:textColor="@color/black"
                android:text="@string/reader_conn_sett" />

            <include layout="@layout/title_divider" />

            <TableRow
                android:id="@+id/autoReconnectReadersRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/autoReconnectReadersTitle"
                    style="@style/style_normal_font"
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:checked="true"
                    android:gravity="left"
                    android:text="@string/auto_reconnect_reader" />

                <CheckBox
                    android:id="@+id/autoReconnectReaders"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/blue_"
                    android:layout_weight="15"
                    android:gravity="center_vertical" />
            </TableRow>

            <TextView
                android:id="@+id/notificationSettingsTitle"
                style="@style/style_medium_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:textColor="@color/black"
                android:text="@string/notification_settings" />

            <include layout="@layout/title_divider" />

            <TableRow
                android:id="@+id/readerAvailableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/readerAvailableTitle"
                    style="@style/style_normal_font"
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:gravity="left"
                    android:text="@string/readers_available" />

                <CheckBox
                    android:id="@+id/readerAvailable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:buttonTint="@color/blue_"
                    android:gravity="center_vertical" />
            </TableRow>

            <include layout="@layout/normal_divider" />

            <TableRow
                android:id="@+id/readerConnectionRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/readerConnectionTitle"
                    style="@style/style_normal_font"
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:gravity="left"
                    android:text="@string/readers_connection" />

                <CheckBox
                    android:id="@+id/readerConnection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:buttonTint="@color/blue_"
                    android:gravity="center_vertical" />
            </TableRow>

            <include layout="@layout/normal_divider" />

            <TableRow
                android:id="@+id/readerBatteryRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/readerBatteryTitle"
                    style="@style/style_normal_font"
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:gravity="left"
                    android:text="@string/reader_battery_status" />

                <CheckBox
                    android:id="@+id/readerBattery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:buttonTint="@color/blue_"
                    android:gravity="center_vertical" />
            </TableRow>


            <TextView
                style="@style/style_medium_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:textColor="@color/black"
                android:text="@string/export_data_sett" />

            <include layout="@layout/title_divider" />

            <TableRow
                android:id="@+id/autoDetectReadersRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    style="@style/style_normal_font"
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:gravity="left"
                    android:text="@string/export_data" />

                <CheckBox
                    android:id="@+id/exportData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:buttonTint="@color/blue_"
                    android:gravity="center_vertical" />
            </TableRow>


            <TextView
                style="@style/style_medium_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:textColor="@color/black"
                android:text="@string/match_mode" />

            <include layout="@layout/title_divider" />

            <TableRow
                android:id="@+id/tagListMatchModeRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    style="@style/style_normal_font"
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:gravity="left"
                    android:text="@string/tag_list_match_mode" />

                <CheckBox
                    android:id="@+id/tagListMatchMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:buttonTint="@color/blue_"
                    android:gravity="center_vertical" />
            </TableRow>

            <include layout="@layout/normal_divider" />

            <TableRow
                android:id="@+id/tagListMatchTagNamesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    style="@style/style_normal_font"
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:gravity="left"
                    android:text="@string/tag_list_match_tag_names" />

                <CheckBox
                    android:id="@+id/tagListMatchTagNames"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:checked="true"
                    android:buttonTint="@color/blue_"
                    android:gravity="center_vertical" />
            </TableRow>

            <TextView
                style="@style/style_medium_font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:textColor="@color/black"
                android:text="@string/global_settings" />

            <include layout="@layout/title_divider" />

            <TableRow
                android:id="@+id/AsciiModeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    style="@style/style_normal_font"
                    android:layout_width="0dp"
                    android:layout_weight="85"
                    android:gravity="center_vertical"
                    android:text="@string/enable_ascii_mode" />

                <CheckBox
                    android:id="@+id/asciiMode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:buttonTint="@color/blue_"
                    android:gravity="center_vertical" />
            </TableRow>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


