<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_layout_style"
    android:orientation="vertical"
    tools:context="com.markss.rfidtemplate.settings.BeeperFragment">

    <TableRow
        android:id="@+id/sledBeeperRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:gravity="center">

        <TextView
            style="@style/style_normal_font"
            android:layout_width="0dp"
            android:layout_weight="85"
            android:gravity="left"
            android:text="@string/sled_beeper_title" />

        <CheckBox
            android:id="@+id/sledBeeper"
            android:layout_width="0dp"
            android:buttonTint="@color/blue_"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_weight="15" />
    </TableRow>

    <include layout="@layout/normal_divider" />

    <TableRow
        android:id="@+id/hostBeeperRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:gravity="center">

        <TextView
            style="@style/style_normal_font"
            android:layout_width="0dp"
            android:layout_weight="85"
            android:gravity="left"
            android:text="@string/host_beeper_title" />

        <CheckBox
            android:id="@+id/hostBeeper"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:buttonTint="@color/blue_"
            android:layout_height="wrap_content"
            android:layout_weight="15" />
    </TableRow>

    <include layout="@layout/normal_divider" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp">

        <TextView
            style="@style/style_normal_font"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/beeper_volume_title" />

        <Spinner
            android:id="@+id/volumeSpinner"
            style="@style/style_default_spinner"
            android:layout_margin="0dp"
            android:layout_weight="1" />

    </TableRow>

    <include layout="@layout/normal_divider" />

</LinearLayout>



